--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://blogapp-sa71.onrender.com/api/"
+  "proxy": "https://blogapp-sa71.onrender.com/api"
 }
